--- a/src/Grafica/Adscripto_ventana.form
+++ b/src/Grafica/Adscripto_ventana.form
@@ -374,14 +374,14 @@
                           <Component id="cursosRegistrados" min="-2" pref="28" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="tabla3" min="-2" pref="187" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="Curso_crear_textoEstudiantes1" min="-2" pref="28" max="-2" attributes="0"/>
                               <Component id="indicadorCurso" min="-2" pref="32" max="-2" attributes="0"/>
-                              <Component id="Curso_crear_textoEstudiantes1" alignment="1" min="-2" pref="28" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="tabla6" min="-2" pref="227" max="-2" attributes="0"/>
-                          <EmptySpace pref="14" max="32767" attributes="0"/>
+                          <EmptySpace pref="10" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -944,43 +944,53 @@
               <Layout>
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <EmptySpace min="0" pref="958" max="32767" attributes="0"/>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+                          <Component id="clasesDictadas" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="numeroClasesDictadas" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
+                          <Component id="clasesNoDictadas" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Component id="numeroClasesNoDictadas" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace pref="558" max="32767" attributes="0"/>
+                      </Group>
                       <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="103" alignment="0" groupAlignment="0" attributes="0">
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="clasesDictadas" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="numeroClasesDictadas" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
-                                          <Component id="clasesNoDictadas" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                          <Component id="numeroClasesNoDictadas" min="-2" max="-2" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="Adscripto_textoSeleccionarClases" alignment="0" min="-2" pref="175" max="-2" attributes="0"/>
+                                          <Component id="Adscripto_textoSeleccionarCursoClases" alignment="0" min="-2" pref="175" max="-2" attributes="0"/>
                                       </Group>
-                                      <Group type="102" alignment="1" attributes="0">
-                                          <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="Adscripto_textoSeleccionarClases" alignment="0" min="-2" pref="175" max="-2" attributes="0"/>
-                                              <Component id="Adscripto_textoSeleccionarCursoClases" alignment="0" min="-2" pref="175" max="-2" attributes="0"/>
-                                          </Group>
-                                          <EmptySpace min="-2" pref="725" max="-2" attributes="0"/>
-                                      </Group>
+                                      <EmptySpace pref="748" max="32767" attributes="0"/>
                                   </Group>
-                                  <Group type="103" alignment="0" groupAlignment="1" attributes="0">
-                                      <Component id="tablaClase" alignment="1" min="-2" pref="913" max="-2" attributes="0"/>
-                                      <Component id="tabla14" alignment="1" min="-2" pref="913" max="-2" attributes="0"/>
+                                  <Group type="102" attributes="0">
+                                      <Group type="103" groupAlignment="1" attributes="0">
+                                          <Component id="tablaClase" alignment="1" min="-2" pref="913" max="-2" attributes="0"/>
+                                          <Component id="tabla14" alignment="1" min="-2" pref="913" max="-2" attributes="0"/>
+                                      </Group>
+                                      <EmptySpace pref="23" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace pref="23" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
                 </DimensionLayout>
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <EmptySpace min="0" pref="544" max="32767" attributes="0"/>
+                      <Group type="102" alignment="1" attributes="0">
+                          <EmptySpace pref="493" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="clasesDictadas" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
+                              <Component id="numeroClasesDictadas" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
+                              <Component id="clasesNoDictadas" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
+                              <Component id="numeroClasesNoDictadas" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace max="-2" attributes="0"/>
+                      </Group>
                       <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
@@ -990,15 +1000,8 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="Adscripto_textoSeleccionarClases" min="-2" pref="40" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="tablaClase" min="-2" pref="150" max="-2" attributes="0"/>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="clasesDictadas" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
-                                  <Component id="numeroClasesDictadas" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
-                                  <Component id="clasesNoDictadas" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
-                                  <Component id="numeroClasesNoDictadas" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+                              <Component id="tablaClase" min="-2" pref="198" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
